--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.pegdown</groupId>
+            <artifactId>pegdown</artifactId>
+            <version>1.2.1</version>
+        </dependency>
     </dependencies>
 
 </project>
