--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>OOP</module>
+        <module>OOP/family_tree</module>
     </modules>
 
     <properties>
