--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>OOP</module>
         <module>OOP/family_tree</module>
+        <module>FileManage</module>
     </modules>
 
     <properties>
